Fixed line wrapping and file insertion interaction

--- a/web/client/styles/main.css
+++ b/web/client/styles/main.css
@@ -53,19 +53,19 @@ html,body,#app {
   width: calc(30% - 2px);
 }
 .pane-header {
-  height: 1.9rem; 
-  padding: 0.4rem 0px 0rem 0px;
+  height: 1.7rem; 
+  padding: 0.3rem 0px 0rem 0px;
   border-bottom: solid 1px #BBB;
 }
 
 .pane-header img {
-  height: 1.5rem;
-  vertical-align: middle;
+  height: 1.2rem;
+  vertical-align: -0.2rem;
 }
 
 .pane-content {
   height: 95%;
-  height: calc(100% - 2.3rem - 4px);    
+  height: calc(100% - 2rem - 4px);    
 }
 
 .pane.right {
@@ -243,7 +243,7 @@ div.boxed {
 
 /* this rule is necessary for IE */
 .menubar .popup {
-  width: 2.4em; 
+  width: 2em; 
 }
 
 
